# fumola

./: .gitignore  Cargo.toml  README.md  repl.sh  run-example-mergeSort.sh  test.sh  time-mergeSort-example.sh  write-level-tree-scene.sh  write-merge-sort-scene.sh  write-mergeSort-scene.sh
.github/workflows/: bench.yml  rust.yml
base/: SeqTree.fumola
crates/fumola/: Cargo.toml
crates/fumola/benches/: benchmark.rs
crates/fumola/src/lib/: adapton.rs  ast.rs  check.rs  eval.rs  format.rs  format_utils.rs  mod.rs  parser.lalrpop  parser_utils.rs  quoted.rs  shared.rs  state.rs  value.rs  vm_core.rs  vm_def.rs  vm_match.rs  vm_ops.rs  vm_prim.rs  vm_stack_cont.rs  vm_step.rs  vm_types.rs
crates/fumola/src/lib/convert/: ser.rs
crates/fumola/tests/: test_actors.rs  test_adapton.rs  test_adapton_graphical.rs  test_breakpoints.rs  test_class.rs  test_conversions.rs  test_core.rs  test_dynamic.rs  test_eval.rs  test_imports.rs  test_modules.rs  test_packages.rs  test_parser.rs  test_unquote.rs  test_vm.rs
crates/fumola_parser/: Cargo.toml  build.rs
crates/fumola_parser/src/lib/: mod.rs  parser.lalrpop  parser_types.rs  parser_utils.rs
crates/fumola_proc_macro/: Cargo.toml
crates/fumola_proc_macro/src/: lib.rs
crates/fumola_proc_macro/tests/: test_eval_open_block.rs  test_hashmap_randiter_integration.rs  test_motoko_static.rs
crates/fumola_semantics/: Cargo.toml
crates/fumola_semantics/src/lib/: adapton.rs  candid_utils.rs  check.rs  dynamic.rs  format.rs  mod.rs  quoted.rs  value.rs  vm_core.rs  vm_def.rs  vm_match.rs  vm_ops.rs  vm_prim.rs  vm_stack_cont.rs  vm_step.rs  vm_types.rs
crates/fumola_semantics/src/lib/adapton/: graphical.rs  mod.rs  peek_value.rs  reserved.rs  simple.rs  state.rs
crates/fumola_semantics/src/lib/adapton/graphical/: mod.rs
crates/fumola_semantics/src/lib/convert/: ser.rs
crates/fumola_syntax/: Cargo.toml
crates/fumola_syntax/src/lib/: ast.rs  lexer.rs  mod.rs  shared.rs
example-output/: mergeSort-inputSeq  mergeSortSceneFullDemand-seed-10-size-10-Outline-txt
fumola/collections/: Counters.fumola  LazyList.fumola  List.fumola  SeqTree.fumola  adapton.fumola  hashMap.fumola  levelTree.fumola  pureList.fumola  randomInput.fumola
fumola/examples/: delayedPut.fumola
fumola/examples/mergeSort/: Counters.fumola  LazyList.fumola  List.fumola  Listings.md  SeqTree.fumola  adapton.fumola  hashMap.fumola  levelTree.fumola  mergeSort.fumola  mergeSortPlot.gnuplot  pasteData.sh  pureList.fumola  randomInput.fumola
fumola/examples/mergeSort/webDcgViewer/: index.html  scene.json
fumola/examples/mergeSort/webDcgViewer/v1/: scene2.json
fumola/examples/mergeSort/webDcgViewer/v2/: index.html  scene3.json
fumola/examples/mergeSort/webDcgViewer/v3/: index.html  scene.json
fumola/examples/mergeSort/webDcgViewer/v4/: index.html  scene.json
fumola/examples/mergeSort/webDcgViewer/v5/: index.html
fumola/system/: adapton.fumola  hashMap.fumola
repl-imports/: SeqTree.fumola  delayedPut.fumola  deriveCompare.fumola  gcd.fumola  test2  test3
repl-imports/mergeSortExample/: SeqTree.fumola  mergeSort.fumola  mergeSortPlot.gnuplot
vscode/: language-configuration.json  package-lock.json  package.json
vscode/src/: extension.ts  parser.ts  semanticTokens.ts
vscode/syntaxes/: fumola.tmLanguage.json
vscode/themes/: fumola-color-theme.json
