[workspace]
resolver = "2"
members = [
    "crates/fumola_syntax",
    "crates/fumola_semantics",
    "crates/fumola_parser",
]
# members = [
#    "crates/fumola_syntax",
#    "crates/fumola_semantics",
#    "crates/fumola",
#    "crates/fumola_proc_macro",
# ]

[profile.dev]
incremental = true
debug = true