[package]
name = "fumola"
version = "0.0.29"
authors = ["Matthew Hammer", "Ryan Vandersmith"]
edition = "2021"
license = "Apache-2.0"
description = "Fumola Programming Language"
readme = "README.md"
documentation = "https://docs.rs/fumola"
repository = "https://github.com/Adapton/fumola.rs"
categories = ["wasm"]
keywords = ["wasm", "fumola", "adapton"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[profile.dev]
incremental = true
debug = true

[dependencies]
fumola_syntax = { path = "../fumola_syntax" }
fumola_semantics = { path = "../fumola_semantics" }
fumola_parser = { path = "../fumola_parser" }
lalrpop = { version = "0.22.2", features = ["lexer"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
regex = "1.6.0"
env_logger = "0.10.0"
log = "0.4.17"
structopt = { version = "0.3.26" }
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
ordered-float = { version = "3.0.0", features = ["serde"] }
pretty = "0.11.3"
logos = "0.12.1"
line-col = "0.2.1"
im-rc = { version = "15.1.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive", "rc"] }
serde_json = "1.0.85"
serde_path_to_error = { version = "0.1.8", optional = true }
# serde_with = "2.0.1"
test-log = "0.2.11"
dyn-clone = "1.0.9"
candid = "0.8"
rustyline = { version = "7.0.0", optional = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

[build-dependencies]
lalrpop = "0.22.2"

[lib]
edition = "2021"
name = "fumola"
path = "src/lib/mod.rs"
test = true             # Is tested by default.
doctest = false          # Documentation examples are tested by default.
bench = true            # Is benchmarked by default.
doc = true              # Is documented by default.
plugin = false          # Used as a compiler plugin (deprecated).
harness = true          # Use libtest harness.
crate-type = ["lib"]    # The crate types to generate.
required-features = []  # Features required to build this target (N/A for lib).

[[bin]]
name = "fumola"
path = "src/bin/fumola.rs"

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"
