[package]
name = "fumola_proc_macro"
version = "0.0.29"
authors = ["Matthew Hammer", "Ryan Vandersmith"]
edition = "2024"
license = "Apache-2.0"
description = "Procedural macros for compile-time Fumola expressions in Rust."
readme = "README.md"
documentation = "https://docs.rs/fumola_proc_macro"
repository = "https://github.com/dfinity/fumola.rs"
categories = ["wasm"]
keywords = ["internet-computer", "fumola", "wasm"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "fumola_proc_macro"
proc-macro = true

[dependencies]
# TODO: set this up as a "workspace dependency"? 
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
fumola = { path = "../fumola", version = "0.0.29", default-features = false, features = ["parser"] }
syn = "1.0.100"
quote = "1.0.21"
proc-macro2 = "1.0.44"
serde = "1.0.145"

[dev-dependencies]
num-bigint = { version = "0.4.3", features = ["serde"] }
test-log = "0.2.11"
env_logger = "0.10.0"
